[project]
name = "demo-py-esub"
version = "0.1.0"
description = "A demo project to illustrate how to organize analysis scripts using Python in a recommended folder structure."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "plotnine>=0.15.1",
    "polars>=1.35.1",
    "rtflite>=1.0.2",
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    "quarto>=0.1.0",
    "ipykernel>=7.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python-package"]
include = ["demo001*"]

[tool.setuptools.package-dir]
"" = "python-package"
